--- a/arxiv_langchain.ipynb
+++ b/arxiv_langchain.ipynb
@@ -501,10 +501,12 @@
     }
    ],
    "source": [
-    "categories = [\"AI\", \"CL\", \"CC\", \"CE\", \"CG\", \"GT\", \"CV\", \"CY\", \"CR\", \"DS\", \"DB\", \"DL\", \"DM\", \"DC\", \"ET\", \"FL\", \"GL\", \"GR\", \"AR\", \"HC\", \"IR\", \"IT\", \"LO\", \"LG\", \"MS\", \"MA\", \"MM\", \"NI\", \"NE\", \"NA\", \"OS\", \"OH\", \"PF\", \"PL\", \"RO\", \"SI\", \"SE\", \"SD\", \"SC\", \"SY\"]\n",
-    "arxiv_category = 'cs.' + categories[1]\n",
-    "audios, texts = create_large_episode(arxiv_category)\n",
-    "Audio(b''.join(audios))"
+    "arxiv_categories = [\"AI\", \"CL\", \"CC\", \"CE\", \"CG\", \"GT\", \"CV\", \"CY\", \"CR\", \"DS\", \"DB\", \"DL\", \"DM\", \"DC\", \"ET\", \"FL\", \"GL\", \"GR\", \"AR\", \"HC\", \"IR\", \"IT\", \"LO\", \"LG\", \"MS\", \"MA\", \"MM\", \"NI\", \"NE\", \"NA\", \"OS\", \"OH\", \"PF\", \"PL\", \"RO\", \"SI\", \"SE\", \"SD\", \"SC\", \"SY\"]\n",
+    "\n",
+    "def run(arxiv_category):\n",
+    "    audios, texts = create_large_episode(arxiv_category)\n",
+    "    ep = AudioCompletedEpisode(audios, podcast_args=PODCAST_ARGS)\n",
+    "    ep.upload(f'{arxiv_category}: {get_title(texts)}', '\\n'.join(texts))"
    ]
   },
   {
@@ -514,8 +516,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ep = AudioCompletedEpisode(audios, podcast_args=PODCAST_ARGS)\n",
-    "ep.upload(f'{arxiv_category}: {get_title(texts)}', '\\n'.join(texts))"
+    "# ep = AudioCompletedEpisode(audios, podcast_args=PODCAST_ARGS)\n",
+    "# ep.upload(f'{arxiv_category}: {get_title(texts)}', '\\n'.join(texts))"
    ]
   },
   {
