fix filename too long

--- a/arxiv_langchain.ipynb
+++ b/arxiv_langchain.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "085ba2ee-6274-4e84-8ba1-a12b2fc3170b",
    "metadata": {
     "tags": []
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "65459282-8967-442a-88d9-3812b3e8c31a",
    "metadata": {
     "tags": []
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "a60a8a33-5d82-4025-b68b-9a66f88c6041",
    "metadata": {
     "tags": []
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "903b4d61-2440-4d6d-a987-61c794961852",
    "metadata": {},
    "outputs": [],
@@ -338,18 +338,28 @@
    "outputs": [],
    "source": [
     "\"\"\"TODO:\n",
-    "Create hosting flask server\n",
-    "Automate creation of podcasts through github actions\n",
-    "\n",
-    "Joncompete blog\n",
+    "Give commercials random seed words from giant list\n",
     "\"\"\"\n",
     "pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "398f8c13-eadf-490a-b442-de52c0e01d29",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# a, b = CommercialGenerator().generate()\n",
+    "# a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d70f5c1-4f60-4a2e-9825-406481b143d3",
    "metadata": {},
    "outputs": [],
    "source": []
