--- a/arxiv_langchain.ipynb
+++ b/arxiv_langchain.ipynb
@@ -216,7 +216,7 @@
     "            company = self.get_random_company()\n",
     "        chat = PodcastChat(f\"Very short commercial for {company}\", host_voices=[GttsTTS(GttsTTS.MAN), GttsTTS(GttsTTS.WOMAN)])\n",
     "        chat._history[-1] = {\"role\": \"user\", \"content\": f\"Generate a very funny, weird, and short commercial for {company}, who is sponsoring the podcast.\"}\n",
-    "        return chat.step(frequency_penalty=1.2, max_tokens=420)"
+    "        return chat.step(frequency_penalty=1.2)"
    ]
   },
   {
