--- a/arxiv_langchain.ipynb
+++ b/arxiv_langchain.ipynb
@@ -94,7 +94,7 @@
     "    def concat_podcast_parts(self, texts):\n",
     "        \"\"\"Given list of texts from chatGPT about the podcast.\"\"\"\n",
     "        chat = PodcastChat(max_length=12_000, **{**self._kwargs, 'topic': self.title})\n",
-    "        msg = \"Rewrite the following podcast episode as one complete single episode.\\n\"\n",
+    "        msg = \"Rewrite the following podcast episode as just one complete single episode.\\n\"\n",
     "        msg += \"\\n\".join(texts)\n",
     "        msg, aud = chat.step(msg=msg, model='gpt-3.5-turbo-16k', ret_aud=True, frequency_penalty=0.75)\n",
     "        if len(msg) < 500:\n",
