--- a/ChatPodcastGPT.ipynb
+++ b/ChatPodcastGPT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "251565c8-29cd-4315-bafb-630fe4cbbe51",
    "metadata": {
     "tags": []
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f2e5b9a9-23d5-429c-8e86-32b3d012b9d1",
    "metadata": {
     "tags": []
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "507cf5f9-cc95-44be-afb2-8c09b2a060d3",
    "metadata": {
     "tags": []
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "1f7accf3-a13d-448e-927d-d47d7a3961e6",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a2ea46ab-a973-4ad2-852b-2613274dd9e7",
    "metadata": {
     "tags": []
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "14a0eef7-3b50-4ca7-9210-2042d7adbe00",
    "metadata": {
     "tags": []
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "6cb12748-5a8a-4b27-b688-2e7bc583be17",
    "metadata": {
     "tags": []
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "6fea16c5-3d56-4277-a6eb-d74667b64435",
    "metadata": {
     "tags": []
@@ -402,18 +402,18 @@
     "        if self.episode_type == 'narration':\n",
     "            outline = self.get_outline(msg, nparts)\n",
     "            logger.info(f\"Outline: {outline}\")\n",
-    "            intro_txt, intro_aud = self.chat.step(f\"Write the intro for a podcast about {msg}. The outline for the podcast is {', '.join(outline)}. Only write the introduction.{include}\")\n",
+    "            intro_txt, intro_aud = self.chat.step(f\"Write the intro for a podcast about {msg}. The outline for the podcast is {', '.join(outline)}. Only write the introduction.{include}\", model=self.text_model)\n",
     "            self.sounds.append(intro_aud)\n",
     "            self.texts.append(intro_txt)\n",
     "            # Get parts\n",
     "            for part in outline:\n",
     "                logger.info(f\"Part: {part}\")\n",
-    "                part_txt, part_aud = self.chat.step(f\"Write the next part: {part}.{include}\")\n",
+    "                part_txt, part_aud = self.chat.step(f\"Write the next part: {part}.{include}\", model=self.text_model)\n",
     "                self.sounds.append(part_aud)\n",
     "                self.texts.append(part_txt)\n",
     "            # Get conclusion\n",
     "            logger.info(\"Conclusion\")\n",
-    "            part_txt, part_aud = self.chat.step(f\"Write the conclusion. Remember, the outline was: {', '.join(outline)}.{include}\")\n",
+    "            part_txt, part_aud = self.chat.step(f\"Write the conclusion. Remember, the outline was: {', '.join(outline)}.{include}\", model=self.text_model)\n",
     "            self.sounds.append(part_aud)\n",
     "            self.texts.append(part_txt)\n",
     "        elif self.episode_type == 'pure_tts':\n",
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1132bda8-7767-4f78-9789-046c4af27a72",
    "metadata": {
     "tags": []
@@ -444,10 +444,22 @@
     "# %%time\n",
     "# ep = Episode(\n",
     "#     episode_type='narration',\n",
-    "#     topic=\"Adorable Animal Behaviours: Pigeons\",\n",
+    "#     topic=\"Debate: Should Logitech add voice related functionality to its lineup of mice and keyboards to work with ChatGPT?\",\n",
+    "#     max_length=120_000,\n",
+    "#     text_model='gpt-4-1106-preview',\n",
     "# )\n",
     "# outline, txt = ep.step(nparts='three')\n",
-    "# ep.upload(\"(3part 01) \" + ep.chat._topic, '\\n'.join(outline))"
+    "# ep.upload(\"(New OpenAI APIs v1) \" + ep.chat._topic[:100], '\\n'.join(outline))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "6b6f1dc6-274b-42b4-b9d3-a0ead003c7a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ep.upload(\"(New OpenAI APIs v2) \" + ep.chat._topic[:100], '\\n'.join(outline))"
    ]
   },
   {
