--- a/ChatPodcastGPT.ipynb
+++ b/ChatPodcastGPT.ipynb
@@ -197,13 +197,15 @@
    "source": [
     "class PodcastChat(Chat):\n",
     "    def __init__(self, topic, podcast=\"award winning\", max_length=4096//2, hosts=['Tom', 'Jen'], host_voices=[OpenAITTS(OpenAITTS.MAN), OpenAITTS(OpenAITTS.WOMAN)]):\n",
-    "        system = f\"You are an {podcast} podcast with hosts {hosts[0]} and {hosts[1]}.\"\n",
+    "        system = f\"\"\"You are an {podcast} podcast with hosts {hosts[0]} and {hosts[1]}.\n",
+    "Respond with the hosts names before each line like {hosts[0]}: and {hosts[1]}:\"\"\".replace(\"\\n\", \" \")\n",
     "        super().__init__(system, max_length=max_length)\n",
     "        self._podcast = podcast\n",
     "        self._topic = topic\n",
     "        self._hosts = hosts\n",
     "        self._history.append({\n",
-    "            \"role\": \"user\", \"content\": f\"Generate an informative and entertaining podcast episode about {topic}. Make sure to teach complex topics in an intuitive way.\"\n",
+    "            \"role\": \"user\", \"content\": f\"\"\"Generate an informative and entertaining podcast episode about {topic}.\n",
+    "Make sure to teach complex topics in an intuitive way.\"\"\".replace(\"\\n\", \" \")\n",
     "        })\n",
     "        self._tts_h1, self._tts_h2 = host_voices\n",
     "\n",
