--- a/arxiv_langchain.ipynb
+++ b/arxiv_langchain.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "085ba2ee-6274-4e84-8ba1-a12b2fc3170b",
    "metadata": {
     "tags": []
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "65459282-8967-442a-88d9-3812b3e8c31a",
    "metadata": {
     "tags": []
@@ -64,12 +64,6 @@
     "        current_part = []\n",
     "        current_title = 'Paper'\n",
     "        for line in lines:\n",
-    "            # if re.match(r'\\d+\\s[A-Za-z]', line):\n",
-    "            #     if current_part:\n",
-    "            #         parts.append(self.PDFPart(current_title, \"\\n\".join(current_part)))\n",
-    "            #     current_title = line\n",
-    "            #     current_part = []\n",
-    "            # else:\n",
     "            current_part.append(line)\n",
     "\n",
     "            while Chat.num_tokens_from_text('\\n'.join(current_part)) > max_tokens:\n",
@@ -95,13 +89,17 @@
     "        return msg, aud\n",
     "\n",
     "    def step(self):\n",
-    "        include = f\" Remember to respond with the hosts names before each line like {self.chat._hosts[0]}: and {self.chat._hosts[1]}:\"\n",
     "        outline = self.data[0].text\n",
     "\n",
     "        # Get parts\n",
     "        with concurrent.futures.ThreadPoolExecutor(max_workers=16) as tpe:\n",
     "            jobs = ([\n",
-    "                tpe.submit(self.write_one_part, f\"Explain the paper \\\"{self.title}\\\" as a podcast. Explain everything as if the listener has no idea.\\nThe text in the paper is:\\n{part.text}.{include}\")\n",
+    "                tpe.submit(self.write_one_part, f\"\"\"Explain the paper \\\"{self.title}\\\" in depth.\n",
+    "Explain everything as if the listener has no idea.\n",
+    "Respond with the hosts names before each line like {self.chat._hosts[0]}: and {self.chat._hosts[1]}:\n",
+    "The text in the paper is:\n",
+    "{part.text}\n",
+    "\"\"\")\n",
     "                for part in self.data\n",
     "            ])\n",
     "            job2idx = {j:i for i, j in enumerate(jobs)}\n",
@@ -118,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "a60a8a33-5d82-4025-b68b-9a66f88c6041",
    "metadata": {
     "tags": []
@@ -178,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "903b4d61-2440-4d6d-a987-61c794961852",
    "metadata": {},
    "outputs": [],
@@ -201,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "19acd44b-933e-46a1-94f7-5a59e4db5ede",
    "metadata": {
     "tags": []
@@ -225,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "8b28cdd3-a742-4287-86dc-f9978743dfb3",
    "metadata": {
     "tags": []
@@ -273,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "f318ebbc-418f-42a6-b9e5-86a4e564761e",
    "metadata": {},
    "outputs": [],
@@ -288,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "24c116aa-d377-45e6-ae4a-9b8cb649605f",
    "metadata": {},
    "outputs": [],
@@ -301,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "5e281630-31a3-4bfe-be29-31e946668fb4",
    "metadata": {},
    "outputs": [],
@@ -319,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "cb999590-295d-4181-a2db-e5791e0234a4",
    "metadata": {
     "scrolled": true,
@@ -327,7 +325,7 @@
    },
    "outputs": [],
    "source": [
-    "# ep = run(\"cs.AI\", upload=False, limit=1)\n",
+    "# ep = run(\"cs.CY\", upload=False, limit=1)\n",
     "# ep"
    ]
   },
@@ -344,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "id": "e42913b5-c074-4563-a2e7-292b40eb42f3",
    "metadata": {},
    "outputs": [],
