--- a/ChatPodcastGPT.ipynb
+++ b/ChatPodcastGPT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "251565c8-29cd-4315-bafb-630fe4cbbe51",
    "metadata": {
     "tags": []
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "f2e5b9a9-23d5-429c-8e86-32b3d012b9d1",
    "metadata": {
     "tags": []
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "507cf5f9-cc95-44be-afb2-8c09b2a060d3",
    "metadata": {
     "tags": []
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "1f7accf3-a13d-448e-927d-d47d7a3961e6",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
     "    \"\"\"https://platform.openai.com/docs/guides/text-to-speech\"\"\"\n",
     "    WOMAN = 'nova'\n",
     "    MAN = 'echo'\n",
-    "    def __init__(self, voice_id=None, model='tts-1'):\n",
+    "    def __init__(self, voice_id=None, model='tts-1-hd'):\n",
     "        \"\"\"Voices:\n",
     "        alloy, echo, fable, onyx, nova, and shimmer\n",
     "        Models:\n",
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "a2ea46ab-a973-4ad2-852b-2613274dd9e7",
    "metadata": {
     "tags": []
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "14a0eef7-3b50-4ca7-9210-2042d7adbe00",
    "metadata": {
     "tags": []
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "6cb12748-5a8a-4b27-b688-2e7bc583be17",
    "metadata": {
     "tags": []
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "6fea16c5-3d56-4277-a6eb-d74667b64435",
    "metadata": {
     "tags": []
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "1132bda8-7767-4f78-9789-046c4af27a72",
    "metadata": {
     "tags": []
@@ -446,12 +446,12 @@
     "# %%time\n",
     "# ep = Episode(\n",
     "#     episode_type='narration',\n",
-    "#     topic=\"Debate: Should Logitech add voice related functionality to its lineup of mice and keyboards to work with ChatGPT?\",\n",
+    "#     topic=\"From Treetops to Ice Flops: The Curious Lives of Giraffes, Penguins, and Squirrels\",\n",
     "#     max_length=120_000,\n",
     "#     text_model='gpt-4-1106-preview',\n",
     "# )\n",
-    "# outline, txt = ep.step(nparts='three')\n",
-    "# ep.upload(\"(New OpenAI APIs v1) \" + ep.chat._topic[:100], '\\n'.join(outline))"
+    "# outline, txt = ep.step(nparts='6')\n",
+    "# ep.upload(\"(New OpenAI APIs v1) \" + ep.chat._topic[:200], '\\n'.join(outline))"
    ]
   },
   {
