add rate limits

--- a/ChatPodcastGPT.ipynb
+++ b/ChatPodcastGPT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "251565c8-29cd-4315-bafb-630fe4cbbe51",
    "metadata": {
     "tags": []
@@ -14,7 +14,7 @@
     "import tempfile\n",
     "import IPython\n",
     "import enum\n",
-    "import structlog\n",
+    "import jonlog\n",
     "from gtts import gTTS\n",
     "import uuid\n",
     "import datetime as dt\n",
@@ -22,6 +22,8 @@
     "import concurrent.futures\n",
     "import base64\n",
     "from github import Github\n",
+    "import time\n",
+    "import threading\n",
     "import os\n",
     "import re\n",
     "import retrying\n",
@@ -29,13 +31,47 @@
     "from xml.etree import ElementTree as ET\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
-    "logger = structlog.getLogger()\n",
+    "logger = jonlog.getLogger()\n",
     "openai.api_key = os.environ.get(\"OPENAI_KEY\", None) or open('/Users/jong/.openai_key').read().strip()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
+   "id": "526459ff-9ad2-4e56-b11d-dc522fe319b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class RateLimited:\n",
+    "    def __init__(self, max_per_minute):\n",
+    "        self.max_per_minute = max_per_minute\n",
+    "        self.current_minute = time.strftime('%M')\n",
+    "        self.lock = threading.Lock()\n",
+    "        self.calls = 0\n",
+    "\n",
+    "    def __call__(self, fn):\n",
+    "        def wrapper(*args, **kwargs):\n",
+    "            run = False\n",
+    "            with self.lock:\n",
+    "                current_minute = time.strftime('%M')\n",
+    "                if current_minute != self.current_minute:\n",
+    "                    self.current_minute = current_minute\n",
+    "                    self.calls = 0\n",
+    "                if self.calls < self.max_per_minute:\n",
+    "                    self.calls += 1\n",
+    "                    run = True\n",
+    "            if run:\n",
+    "                return fn(*args, **kwargs)\n",
+    "            else:\n",
+    "                time.sleep(15)\n",
+    "                return wrapper(*args, **kwargs)\n",
+    "                    \n",
+    "        return wrapper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "f2e5b9a9-23d5-429c-8e86-32b3d012b9d1",
    "metadata": {
     "tags": []
@@ -67,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "507cf5f9-cc95-44be-afb2-8c09b2a060d3",
    "metadata": {
     "tags": []
@@ -92,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "1f7accf3-a13d-448e-927d-d47d7a3961e6",
    "metadata": {},
    "outputs": [],
@@ -101,7 +137,7 @@
     "    \"\"\"https://platform.openai.com/docs/guides/text-to-speech\"\"\"\n",
     "    WOMAN = 'nova'\n",
     "    MAN = 'echo'\n",
-    "    def __init__(self, voice_id=None, model='tts-1-hd'):\n",
+    "    def __init__(self, voice_id=None, model='tts-1'):\n",
     "        \"\"\"Voices:\n",
     "        alloy, echo, fable, onyx, nova, and shimmer\n",
     "        Models:\n",
@@ -110,7 +146,8 @@
     "        self.voice = voice_id\n",
     "        self.model = model\n",
     "\n",
-    "    @retrying.retry(stop_max_attempt_number=5, wait_fixed=2000)\n",
+    "    @RateLimited(95)\n",
+    "    @jonlog.retry_with_logging()\n",
     "    def tts(self, text):\n",
     "        response = openai.OpenAI(api_key=openai.api_key).audio.speech.create(\n",
     "          model=self.model,\n",
@@ -129,14 +166,15 @@
    },
    "outputs": [],
    "source": [
-    "DEFAULT_MODEL = 'gpt-3.5-turbo'\n",
+    "DEFAULT_MODEL = 'gpt-4-1106-preview'\n",
+    "DEFAULT_LENGTH  = 120_000\n",
     "\n",
     "class Chat:\n",
     "    class Model(enum.Enum):\n",
     "        GPT3_5 = \"gpt-3.5-turbo\"\n",
     "        GPT_4  = \"gpt-4-1106-preview\"\n",
     "\n",
-    "    def __init__(self, system, max_length=4096//2):\n",
+    "    def __init__(self, system, max_length=DEFAULT_LENGTH):\n",
     "        self._system = system\n",
     "        self._max_length = max_length\n",
     "        self._history = [\n",
@@ -196,7 +234,7 @@
    "outputs": [],
    "source": [
     "class PodcastChat(Chat):\n",
-    "    def __init__(self, topic, podcast=\"award winning\", max_length=4096//2, hosts=['Tom', 'Jen'], host_voices=[OpenAITTS(OpenAITTS.MAN), OpenAITTS(OpenAITTS.WOMAN)]):\n",
+    "    def __init__(self, topic, podcast=\"award winning\", max_length=DEFAULT_LENGTH, hosts=['Tom', 'Jen'], host_voices=[OpenAITTS(OpenAITTS.MAN), OpenAITTS(OpenAITTS.WOMAN)]):\n",
     "        system = f\"\"\"You are an {podcast} podcast with hosts {hosts[0]} and {hosts[1]}.\n",
     "Respond with the hosts names before each line like {hosts[0]}: and {hosts[1]}:\"\"\".replace(\"\\n\", \" \")\n",
     "        super().__init__(system, max_length=max_length)\n",
@@ -436,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "1132bda8-7767-4f78-9789-046c4af27a72",
    "metadata": {
     "tags": []
@@ -446,7 +484,7 @@
     "# %%time\n",
     "# ep = Episode(\n",
     "#     episode_type='narration',\n",
-    "#     topic=\"From Treetops to Ice Flops: The Curious Lives of Giraffes, Penguins, and Squirrels\",\n",
+    "#     topic=\"PSU Stats 501 Lesson 6: MLR Estimation, Prediction & Model Assumptions\",\n",
     "#     max_length=120_000,\n",
     "#     text_model='gpt-4-1106-preview',\n",
     "# )\n",
@@ -456,39 +494,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6b6f1dc6-274b-42b4-b9d3-a0ead003c7a9",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ep.upload(\"(New OpenAI APIs v2) \" + ep.chat._topic[:100], '\\n'.join(outline))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "45a0e494-5b4b-4f1f-a30c-05d251fe9e2c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "TODO:\n",
-    "    - runtime voice choosing to include accented voices\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "828166d3-0a3b-4a83-8715-3aa496efb4f2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "TODO:\n",
-    "    Make web server and send mp3 to frontend\n",
-    "    Make frontend and play results\n",
-    "\"\"\""
    ]
   },
   {
