--- a/ChatPodcastGPT.ipynb
+++ b/ChatPodcastGPT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "251565c8-29cd-4315-bafb-630fe4cbbe51",
    "metadata": {
     "tags": []
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "526459ff-9ad2-4e56-b11d-dc522fe319b3",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "f2e5b9a9-23d5-429c-8e86-32b3d012b9d1",
    "metadata": {
     "tags": []
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "507cf5f9-cc95-44be-afb2-8c09b2a060d3",
    "metadata": {
     "tags": []
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "1f7accf3-a13d-448e-927d-d47d7a3961e6",
    "metadata": {},
    "outputs": [],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "a2ea46ab-a973-4ad2-852b-2613274dd9e7",
    "metadata": {
     "tags": []
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "14a0eef7-3b50-4ca7-9210-2042d7adbe00",
    "metadata": {
     "tags": []
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "6cb12748-5a8a-4b27-b688-2e7bc583be17",
    "metadata": {
     "tags": []
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "6fea16c5-3d56-4277-a6eb-d74667b64435",
    "metadata": {
     "tags": []
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "1132bda8-7767-4f78-9789-046c4af27a72",
    "metadata": {
     "tags": []
@@ -484,22 +484,12 @@
     "# %%time\n",
     "# ep = Episode(\n",
     "#     episode_type='narration',\n",
-    "#     topic=\"PSU Stats 501 Lesson 6: MLR Estimation, Prediction & Model Assumptions\",\n",
+    "#     topic=\"Hidden History: Unraveling 7 of History's Mysteries - From the Great Emu War to the Green Children of Woolpit\",\n",
     "#     max_length=120_000,\n",
     "#     text_model='gpt-4-1106-preview',\n",
     "# )\n",
-    "# outline, txt = ep.step(nparts='6')\n",
+    "# outline, txt = ep.step(nparts='7')\n",
     "# ep.upload(\"(New OpenAI APIs v1) \" + ep.chat._topic[:200], '\\n'.join(outline))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6b6f1dc6-274b-42b4-b9d3-a0ead003c7a9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ep.upload(\"(New OpenAI APIs v2) \" + ep.chat._topic[:100], '\\n'.join(outline))"
    ]
   },
   {
