change arxiv listing to cover entire topics

--- a/arxiv_langchain.ipynb
+++ b/arxiv_langchain.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "a60a8a33-5d82-4025-b68b-9a66f88c6041",
    "metadata": {
     "tags": []
@@ -150,6 +150,8 @@
     "        if current_part:\n",
     "            logger.info(f\"PartAdd4, {len(parts)}\")\n",
     "            parts.append(self.ArxivPart(current_title, \"\\n\".join(current_part)))\n",
+    "        if len(parts) > 1:\n",
+    "            raise Exception(\"More than 1 part, giving up\")\n",
     "        return parts\n",
     "\n",
     "    def process_pdf(self, arxiv_id):\n",
@@ -214,11 +216,28 @@
     "\n",
     "    def get_top(self):\n",
     "        \"\"\"Retrieve top Arxiv entries based on category.\"\"\"\n",
-    "        url = f'http://export.arxiv.org/api/query?search_query=cat:{self.category}&start={self.start}' \\\n",
-    "              f'&max_results={self.limit}&sortBy=lastUpdatedDate&sortOrder=descending'\n",
+    "        # url = f'http://export.arxiv.org/api/query?search_query=cat:{self.category}&start={self.start}' \\\n",
+    "        #       f'&max_results={self.limit}&sortBy=submittedDate&sortOrder=descending'\n",
+    "        url = f'https://arxiv.org/list/{self.category}/recent'\n",
     "        print(url)\n",
-    "        data = feedparser.parse(url)\n",
-    "        return [entry['id'].split('/')[-1] for entry in data['entries']]"
+    "        html = requests.get(url).content\n",
+    "        soup = BeautifulSoup(html, 'html.parser')\n",
+    "        articles = []\n",
+    "        \n",
+    "        for item in soup.find_all('dt')[:self.limit]:\n",
+    "            title = item.find_next_sibling('dd').find('div', class_='list-title').text.replace('Title:', '').strip()\n",
+    "            identifier = item.find('span', class_='list-identifier').a.text\n",
+    "            pdf_link = 'https://arxiv.org' + item.find('span', class_='list-identifier').find('a', title='Download PDF')['href']\n",
+    "        \n",
+    "            articles.append({\n",
+    "                'title': title,\n",
+    "                'ID': identifier,\n",
+    "                'pdf': pdf_link\n",
+    "            })\n",
+    "        return [a[\"pdf\"].split('/')[-1] for a in articles]\n",
+    "        \n",
+    "        # data = feedparser.parse(url)\n",
+    "        # return [entry['id'].split('/')[-1] for entry in data['entries']]"
    ]
   },
   {
@@ -317,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "cb999590-295d-4181-a2db-e5791e0234a4",
    "metadata": {
     "scrolled": true,
@@ -325,24 +344,23 @@
    },
    "outputs": [],
    "source": [
-    "# ep = run(\"cs.CY\", upload=False, limit=1)\n",
+    "# ep = run(\"econ\", upload=False, limit=5)\n",
     "# ep"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "3d70f5c1-4f60-4a2e-9825-406481b143d3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# a, b = CommercialGenerator().generate()\n",
-    "# a"
+    "# ep.upload(f'{datetime.datetime.now():%Y-%m-%d} econ: {get_title(texts)}', '\\n\\n'.join(texts))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "e42913b5-c074-4563-a2e7-292b40eb42f3",
    "metadata": {},
    "outputs": [],
@@ -353,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a27ce76-0f46-4688-8c30-629558c4cb57",
+   "id": "7bdc3eea-4804-4d02-a77c-3972e03062e0",
    "metadata": {},
    "outputs": [],
    "source": []
