cost saving measures

--- a/arxiv_langchain.ipynb
+++ b/arxiv_langchain.ipynb
@@ -25,7 +25,7 @@
     "from IPython.display import Audio\n",
     "import datetime\n",
     "\n",
-    "MAX_TOKENS = 120_000 # GPT4-128k\n",
+    "MAX_TOKENS = 60_000 # GPT4-128k\n",
     "JOIN_NUM_DEFAULT = 300\n",
     "DEFAULT_TEXTGEN_MODEL = 'gpt-4-1106-preview'"
    ]
@@ -224,7 +224,7 @@
     "        soup = BeautifulSoup(html, 'html.parser')\n",
     "        articles = []\n",
     "        \n",
-    "        for item in soup.find_all('dt')[:self.limit]:\n",
+    "        for item in soup.find_all('dt'):\n",
     "            title = item.find_next_sibling('dd').find('div', class_='list-title').text.replace('Title:', '').strip()\n",
     "            identifier = item.find('span', class_='list-identifier').a.text\n",
     "            pdf_link = 'https://arxiv.org' + item.find('span', class_='list-identifier').find('a', title='Download PDF')['href']\n",
@@ -261,9 +261,13 @@
     "    jingle_audio = jingle_audio[:len(jingle_audio) // 4]  # Shorten to just 4 sec\n",
     "\n",
     "    audios, texts = [jingle_audio], []\n",
+    "    successes = 0\n",
     "    \n",
     "    for arxiv_id in ArxivRunner(arxiv_category, limit=limit).get_top():\n",
-    "        logger.info(f\"Trying arxiv ID {arxiv_id} in {arxiv_category} with limit {limit}\")\n",
+    "        if successes >= limit:\n",
+    "            break\n",
+    "\n",
+    "        logger.info(f\"Trying arxiv ID {arxiv_id} in {arxiv_category} with {successes}/{limit}\")\n",
     "        try:\n",
     "            arxiv_episode = ArxivEpisode(arxiv_id, model=MODEL, podcast_args=PODCAST_ARGS, host_voices=HOST_VOICES)\n",
     "            outline, txt = arxiv_episode.step()\n",
@@ -276,6 +280,7 @@
     "        audios.append(jingle_audio)\n",
     "        arxiv_title = re.sub('[^0-9a-zA-Z]+', ' ', arxiv_episode.arxiv_title)\n",
     "        texts.append(f'ChatGPT generated podcast using model={MODEL} for https://arxiv.org/abs/{arxiv_id} {arxiv_title}')\n",
+    "        successes += 1\n",
     "        \n",
     "        try:\n",
     "            commercial_text, commercial_sound = CommercialGenerator().generate()\n",
