prompt engineer verbosity

--- a/ChatPodcastGPT.ipynb
+++ b/ChatPodcastGPT.ipynb
@@ -242,7 +242,7 @@
     "        self._topic = topic\n",
     "        self._hosts = hosts\n",
     "        self._history.append({\n",
-    "            \"role\": \"user\", \"content\": f\"\"\"Generate an informative and entertaining podcast episode about {topic}.\n",
+    "            \"role\": \"user\", \"content\": f\"\"\"Generate an informative, entertaining, and very detailed podcast episode about {topic}.\n",
     "Make sure to teach complex topics in an intuitive way.\"\"\".replace(\"\\n\", \" \")\n",
     "        })\n",
     "        self._tts_h1, self._tts_h2 = host_voices\n",
