--- a/arxiv_langchain.ipynb
+++ b/arxiv_langchain.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "65459282-8967-442a-88d9-3812b3e8c31a",
    "metadata": {
     "tags": []
@@ -94,8 +94,27 @@
     "        # Get parts\n",
     "        with concurrent.futures.ThreadPoolExecutor(max_workers=16) as tpe:\n",
     "            jobs = ([\n",
-    "                tpe.submit(self.write_one_part, f\"\"\"Explain the paper \\\"{self.title}\\\" in depth.\n",
-    "Explain everything as if the listener has no idea.\n",
+    "                tpe.submit(self.write_one_part, f\"\"\"Explain the paper \\\"{self.title}\\\" in full detail.\n",
+    "Assume the listener doesn't know anything.\n",
+    "Follow this guide:\n",
+    "\n",
+    "Introduction (500+ words)\n",
+    "Contextual background: Why this paper is significant in its field.\n",
+    "Key Concepts and Background: Explanation of the main scientific concepts or theories addressed in the paper.\n",
+    "(Optional) Breakdown of complex vocabulary used.\n",
+    "\n",
+    "Core (2500+ words)\n",
+    "Detailed discussion of the research paper’s objectives.\n",
+    "Methodology and techniques used.\n",
+    "Key findings and results.\n",
+    "\n",
+    "Implications and Applications (500+ words)\n",
+    "Analysis of the potential impact of these findings on the field.\n",
+    "\n",
+    "Conclusion (500+ words)\n",
+    "Recap of the main points discussed in the episode.\n",
+    "Personal reflections on the paper and its broader relevance.\n",
+    "\n",
     "Respond with the hosts names before each line like {self.chat._hosts[0]}: and {self.chat._hosts[1]}:\n",
     "The text in the paper is:\n",
     "{part.text}\n",
@@ -116,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "a60a8a33-5d82-4025-b68b-9a66f88c6041",
    "metadata": {
     "tags": []
@@ -178,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "903b4d61-2440-4d6d-a987-61c794961852",
    "metadata": {},
    "outputs": [],
@@ -201,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "19acd44b-933e-46a1-94f7-5a59e4db5ede",
    "metadata": {
     "tags": []
@@ -242,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "8b28cdd3-a742-4287-86dc-f9978743dfb3",
    "metadata": {
     "tags": []
@@ -295,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "f318ebbc-418f-42a6-b9e5-86a4e564761e",
    "metadata": {},
    "outputs": [],
@@ -310,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "24c116aa-d377-45e6-ae4a-9b8cb649605f",
    "metadata": {},
    "outputs": [],
@@ -323,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "5e281630-31a3-4bfe-be29-31e946668fb4",
    "metadata": {},
    "outputs": [],
@@ -341,16 +360,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "cb999590-295d-4181-a2db-e5791e0234a4",
    "metadata": {
-    "scrolled": true,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://arxiv.org/list/astro-ph/recent\n",
+      "\u001b[2m2023-11-14T19:38:23.522077Z\u001b[0m [\u001b[32m\u001b[1minfo     \u001b[0m] \u001b[1mTrying arxiv ID 2311.07576 in astro-ph with 0/5\u001b[0m [\u001b[34m\u001b[1m__main__\u001b[0m] \u001b[36mcalling_func\u001b[0m=\u001b[35mcreate_large_episode\u001b[0m \u001b[36mthread_id\u001b[0m=\u001b[35m[Main]\u001b[0m\n",
+      "\u001b[2m2023-11-14T19:38:26.152969Z\u001b[0m [\u001b[32m\u001b[1minfo     \u001b[0m] \u001b[1mPartAdd4, 0                   \u001b[0m [\u001b[34m\u001b[1m__main__\u001b[0m] \u001b[36mcalling_func\u001b[0m=\u001b[35msplit_into_parts\u001b[0m \u001b[36mthread_id\u001b[0m=\u001b[35m[Main]\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
-    "# ep = run(\"econ\", upload=False, limit=5)\n",
-    "# ep"
+    "# ep = run(\"astro-ph\", upload=False, limit=5)\n",
+    "# IPython.display.Audio(b''.join(ep.sounds))"
    ]
   },
   {
@@ -365,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "e42913b5-c074-4563-a2e7-292b40eb42f3",
    "metadata": {},
    "outputs": [],
