commercials are generated from the paper

--- a/arxiv_langchain.ipynb
+++ b/arxiv_langchain.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "085ba2ee-6274-4e84-8ba1-a12b2fc3170b",
    "metadata": {
     "tags": []
@@ -27,12 +27,16 @@
     "\n",
     "MAX_TOKENS = 60_000 # GPT4-128k\n",
     "JOIN_NUM_DEFAULT = 300\n",
-    "DEFAULT_TEXTGEN_MODEL = 'gpt-4-1106-preview'"
+    "DEFAULT_TEXTGEN_MODEL = 'gpt-4-1106-preview'\n",
+    "JINGLE_FILE_PATH = 'jazzstep.mp3'\n",
+    "with open(JINGLE_FILE_PATH, 'rb') as jingle_file:\n",
+    "    JINGLE_AUDIO = jingle_file.read()\n",
+    "JINGLE_AUDIO = JINGLE_AUDIO[:len(JINGLE_AUDIO) // 4]  # Shorten to just 4 sec"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "65459282-8967-442a-88d9-3812b3e8c31a",
    "metadata": {
     "tags": []
@@ -83,9 +87,12 @@
     "        return parts\n",
     "\n",
     "    @retrying.retry(stop_max_attempt_number=3, wait_fixed=2000)\n",
-    "    def write_one_part(self, chat_msg):\n",
+    "    def write_one_part(self, chat_msg, with_commercial=False):\n",
     "        chat = PodcastChat(**{**self._kwargs, 'topic': self.title})\n",
     "        msg, aud = chat.step(msg=chat_msg, model=self.model, ret_aud=True)\n",
+    "        com_msg, com_aud = chat.step(msg=\"Generate a funny, weird, and concise commercial for a company that now exists as a result of this paper.\", model=self.model, ret_aud=True)\n",
+    "        msg = '\\n'.join([msg, com_msg])\n",
+    "        aud = b''.join([aud, JINGLE_AUDIO, com_msg])\n",
     "        return msg, aud\n",
     "\n",
     "    def step(self):\n",
@@ -118,7 +125,7 @@
     "Respond with the hosts names before each line like {self.chat._hosts[0]}: and {self.chat._hosts[1]}:\n",
     "The text in the paper is:\n",
     "{part.text}\n",
-    "\"\"\")\n",
+    "\"\"\", with_commercial=True)\n",
     "                for part in self.data\n",
     "            ])\n",
     "            job2idx = {j:i for i, j in enumerate(jobs)}\n",
@@ -135,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "a60a8a33-5d82-4025-b68b-9a66f88c6041",
    "metadata": {
     "tags": []
@@ -197,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "903b4d61-2440-4d6d-a987-61c794961852",
    "metadata": {},
    "outputs": [],
@@ -220,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "19acd44b-933e-46a1-94f7-5a59e4db5ede",
    "metadata": {
     "tags": []
@@ -261,25 +268,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "id": "8b28cdd3-a742-4287-86dc-f9978743dfb3",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "JINGLE_FILE_PATH = 'jazzstep.mp3'\n",
     "MODEL = DEFAULT_TEXTGEN_MODEL\n",
     "HOST_VOICES = [OpenAITTS(OpenAITTS.MAN), OpenAITTS(OpenAITTS.WOMAN)]\n",
     "PODCAST_ARGS = (\"ArxivPodcastGPT\", \"ArxivPodcastGPT.github.io\", \"podcasts/ComputerScience/Consolidated/podcast.xml\")\n",
     "\n",
-    "def create_large_episode(arxiv_category, limit=5):\n",
+    "def create_large_episode(arxiv_category, limit=5, add_commercials=False):\n",
     "    \"\"\"Create a podcast episode with Arxiv papers.\"\"\"\n",
-    "    with open(JINGLE_FILE_PATH, 'rb') as jingle_file:\n",
-    "        jingle_audio = jingle_file.read()\n",
-    "    jingle_audio = jingle_audio[:len(jingle_audio) // 4]  # Shorten to just 4 sec\n",
-    "\n",
-    "    audios, texts = [jingle_audio], []\n",
+    "    audios, texts = [JINGLE_AUDIO], []\n",
     "    successes = 0\n",
     "    \n",
     "    for arxiv_id in ArxivRunner(arxiv_category, limit=limit).get_top():\n",
@@ -296,15 +298,17 @@
     "            continue\n",
     "\n",
     "        audios.append(b''.join(arxiv_episode.sounds))\n",
-    "        audios.append(jingle_audio)\n",
+    "        audios.append(JINGLE_AUDIO)\n",
     "        arxiv_title = re.sub('[^0-9a-zA-Z]+', ' ', arxiv_episode.arxiv_title)\n",
     "        texts.append(f'ChatGPT generated podcast using model={MODEL} for https://arxiv.org/abs/{arxiv_id} {arxiv_title}')\n",
     "        successes += 1\n",
-    "        \n",
+    "\n",
+    "        if not add_commercials:\n",
+    "            continue\n",
     "        try:\n",
     "            commercial_text, commercial_sound = CommercialGenerator().generate()\n",
     "            audios.append(commercial_sound)\n",
-    "            audios.append(jingle_audio)\n",
+    "            audios.append(JINGLE_AUDIO)\n",
     "        except Exception as e:\n",
     "            logger.error(\"Unable to generate commercial\")\n",
     "            logger.exception(e)\n",
@@ -314,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "id": "f318ebbc-418f-42a6-b9e5-86a4e564761e",
    "metadata": {},
    "outputs": [],
@@ -329,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "id": "24c116aa-d377-45e6-ae4a-9b8cb649605f",
    "metadata": {},
    "outputs": [],
@@ -342,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "5e281630-31a3-4bfe-be29-31e946668fb4",
    "metadata": {},
    "outputs": [],
@@ -360,21 +364,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "cb999590-295d-4181-a2db-e5791e0234a4",
    "metadata": {
-    "scrolled": true,
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# ep = run(\"astro-ph\", upload=False, limit=5)\n",
+    "# ep = run(\"astro-ph\", upload=False, limit=1)\n",
     "# IPython.display.Audio(b''.join(ep.sounds))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "id": "3d70f5c1-4f60-4a2e-9825-406481b143d3",
    "metadata": {},
    "outputs": [],
